[gd_scene load_steps=18 format=3 uid="uid://bc4kcq0m8brly"]

[ext_resource type="Script" path="res://glow-scene.gd" id="1_0j4wj"]
[ext_resource type="PackedScene" uid="uid://d07cihh8eb8st" path="res://robot.tscn" id="1_6r113"]
[ext_resource type="Texture2D" uid="uid://dmiku8rm1f45f" path="res://sphere-256x256.png" id="1_sq3ru"]
[ext_resource type="Texture2D" uid="uid://cjiupv1ioxyvr" path="res://icon-mouth.png" id="2_2obl1"]
[ext_resource type="Texture2D" uid="uid://c6erg1h75f4ff" path="res://icon-eyes.png" id="3_jxnof"]
[ext_resource type="Texture2D" uid="uid://ci8150il4wqle" path="res://icon-nose.png" id="4_8r0hu"]
[ext_resource type="Shader" path="res://glow-godot3.gdshader" id="5_8fw4m"]
[ext_resource type="Script" path="res://GlowShader.gd" id="6_0o435"]

[sub_resource type="Animation" id="Animation_ngiu0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Robot1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(120, 234)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Robot2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(339, 90)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Robot3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(527, 239)]
}

[sub_resource type="Animation" id="Animation_517xw"]
resource_name = "wander"
length = 7.0
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Robot1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 5, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(120, 234), Vector2(120, 234), Vector2(283, 167), Vector2(283, 167)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Robot2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 5.0001, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(339, 90), Vector2(339, 90), Vector2(297, 187), Vector2(297, 187)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Robot3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 5.0001, 7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(527, 239), Vector2(527, 239), Vector2(320, 185), Vector2(320, 185)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_43570"]
_data = {
"RESET": SubResource("Animation_ngiu0"),
"wander": SubResource("Animation_517xw")
}

[sub_resource type="Animation" id="Animation_3jp7c"]
resource_name = "lights"
length = 5.0
loop_mode = 2
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(73, 298), Vector2(333, 177)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(603, 253), Vector2(349, 187)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(330, 12), Vector2(340, 176)]
}

[sub_resource type="Animation" id="Animation_ovaoy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(73, 298)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(603, 253)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PointLight2D3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(330, 12)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rlyvn"]
_data = {
"RESET": SubResource("Animation_ovaoy"),
"lights": SubResource("Animation_3jp7c")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_hynr7"]
viewport_path = NodePath("SubViewportContainer/SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c1g5o"]
resource_local_to_scene = true
shader = ExtResource("5_8fw4m")
shader_parameter/glow_strength = 1.5
shader_parameter/lod = 0.0
shader_parameter/view_size = Vector2(640, 360)
shader_parameter/viewport_texture = SubResource("ViewportTexture_hynr7")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_yoppb"]
light_mode = 1

[node name="Glow4" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_0j4wj")

[node name="World" type="Node2D" parent="."]

[node name="Background" type="ColorRect" parent="World"]
offset_right = 640.0
offset_bottom = 360.0
color = Color(0, 0, 0, 1)

[node name="Robot1" parent="World" instance=ExtResource("1_6r113")]
position = Vector2(120, 234)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="World/Robot1"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/Robot1-Mouth")

[node name="Robot2" parent="World" instance=ExtResource("1_6r113")]
position = Vector2(339, 90)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="World/Robot2"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/Robot2-Eyes")

[node name="Robot3" parent="World" instance=ExtResource("1_6r113")]
position = Vector2(527, 239)

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="World/Robot3"]
remote_path = NodePath("../../../SubViewportContainer/SubViewport/Robot3-Nose")

[node name="RobotAnimations" type="AnimationPlayer" parent="World"]
unique_name_in_owner = true
autoplay = "wander"
libraries = {
"": SubResource("AnimationLibrary_43570")
}

[node name="PointLight2D1" type="PointLight2D" parent="World"]
unique_name_in_owner = true
visible = false
position = Vector2(73, 298)
energy = 1.5
blend_mode = 2
texture = ExtResource("1_sq3ru")

[node name="PointLight2D2" type="PointLight2D" parent="World"]
unique_name_in_owner = true
visible = false
position = Vector2(603, 253)
energy = 1.5
blend_mode = 2
texture = ExtResource("1_sq3ru")

[node name="PointLight2D3" type="PointLight2D" parent="World"]
unique_name_in_owner = true
visible = false
position = Vector2(330, 12)
energy = 1.5
blend_mode = 2
texture = ExtResource("1_sq3ru")

[node name="LightAnimations" type="AnimationPlayer" parent="World"]
autoplay = "lights"
speed_scale = 2.5
libraries = {
"": SubResource("AnimationLibrary_rlyvn")
}

[node name="CanvasModulate" type="CanvasModulate" parent="World"]
unique_name_in_owner = true
visible = false
color = Color(0.717647, 0.717647, 0.717647, 1)

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(640, 360)
render_target_update_mode = 4

[node name="Robot1-Mouth" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
modulate = Color(0.0862745, 1, 0.0705882, 1)
position = Vector2(120, 234)
texture = ExtResource("2_2obl1")

[node name="Robot2-Eyes" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
modulate = Color(0.14902, 1, 0.913725, 1)
position = Vector2(339, 90)
texture = ExtResource("3_jxnof")

[node name="Robot3-Nose" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
modulate = Color(1, 0.0901961, 0.819608, 1)
position = Vector2(527, 239)
texture = ExtResource("4_8r0hu")

[node name="GlowShader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_c1g5o")
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("6_0o435")

[node name="Menu" type="VBoxContainer" parent="."]
material = SubResource("CanvasItemMaterial_yoppb")
offset_left = 8.0
offset_top = 7.0
offset_right = 151.0
offset_bottom = 103.0

[node name="Label" type="Label" parent="Menu"]
use_parent_material = true
layout_mode = 2
text = "Godot 4 3 2D Glow"

[node name="AnimateCheckbox" type="CheckBox" parent="Menu"]
use_parent_material = true
layout_mode = 2
button_pressed = true
text = "Moving"

[node name="LightsCheckbox" type="CheckBox" parent="Menu"]
use_parent_material = true
layout_mode = 2
text = "Lights"

[connection signal="toggled" from="Menu/AnimateCheckbox" to="." method="_on_animate_checkbox_toggled"]
[connection signal="toggled" from="Menu/LightsCheckbox" to="." method="_on_lights_checkbox_toggled"]
